[package]
name = "SeriousClick"
version = "0.1.0"
edition = "2021"
authors = ["AI Assistant"]
description = "A user-friendly auto clicker with multiple clicking modes"

[dependencies]
enigo = "0.1.2"
rand = "0.8.5"
ctrlc = "3.4.1"
egui = "0.22.0"
eframe = "0.22.0"
rfd = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.17.1"
hotkey = "0.3.1"
directories = "5.0.1"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
